sunxi: support Thumb2 for FEL
Thumb2 code is smaller and allows supporting more features in
the SPL without running out of SRAM size.

Signed-off-by: Siarhei Siamashka <siarhei.siamashka@gmail.com>

--- a/arch/arm/cpu/armv7/sunxi/Makefile
+++ b/arch/arm/cpu/armv7/sunxi/Makefile
@@ -40,6 +40,8 @@ obj-$(CONFIG_SUN5I)	+= dram.o
 obj-$(CONFIG_SUN7I)	+= dram.o
 ifdef CONFIG_SPL_FEL
 obj-y	+= start.o
+obj-y	+= s_init_arm.o
+CFLAGS_s_init_arm.o += -marm
 endif
 endif
 
